--- a/portofolio.html
+++ b/portofolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portofolio</title>
-  <link href="css/styles.css" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
 
 
 </head>
@@ -41,7 +41,7 @@
   <div class="container py-5 bg-light ">
     <div class="row">
       <div class="col-lg-3 col-md-6 mb-3">
-        <img id="targetImage" src="img/tasya.png" alt="Foto Profil" width="200" height="200">
+        <img id="targetImage" src="tasya.png" alt="Foto Profil" width="200" height="200">
       </div>
 
       <div class="col-lg-3 col-md-6 mb-3">
@@ -113,7 +113,7 @@
 
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
- <script src="js/index.js"></script>
+ <script src="index.js"></script>
 </body>
 
 </html>
